<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgGuideDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google" />

        </FrameLayout>

        <TextView
            android:id="@+id/namaPanjang_guide"
            style="@style/TextContent.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/namaGuide"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/namaPanggilan_guide"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/panggilan" />

        <TextView
            android:id="@+id/dataSingkat_guide"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/dataSingkat"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/biodata" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/TextSpec.Value"
                    android:text="@string/isiGender" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/umur" />

                <TextView
                    android:id="@+id/tvUmur"
                    style="@style/TextSpec.Value"
                    android:text="@string/umurisi" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/deskripsi" />

                <TextView
                    android:id="@+id/tvdeskripsi_guide"
                    style="@style/TextSpec.Value"
                    android:text="@string/deskripsi" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/no_hpFIX" />

                <TextView
                    android:id="@+id/tvNomer"
                    style="@style/TextSpec.Value"
                    android:text="@string/no_hp_nya" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>